# dales

./: CHANGELOG.md  CMakeLists.txt
cases/constrain_sb3_rad1/: .namoptions.068.kate-swp  ls_flux.inp.068  ls_fluxsv.inp.068  lscale.inp.068  namoptions  namoptions-sb3_128x128.068  namoptions.068  prof.inp.068  scalar.inp.068
cases/rico_roel/: baseprof.inp.001  namoptions  namoptions-master_rico_8x8  namoptions-master_rico_8x8_orig
config/: default.cmake  juwels_CMakeLists.txt  juwels_gcc_parastation.cmake  local_ubuntu.cmake
rundales/: runDALES_local.sh  runDALES_n16nod1_juwels_gcc_parastation_2019_08.sh  runDALES_n32nod2_juwels_gcc_parastation_2019_08.sh
src/: CMakeLists.txt  advec_2nd.f90  advec_5th.f90  advec_6th.f90  advec_hybrid.f90  advec_hybrid_f.f90  advec_kappa.f90  advection.f90  modboundary.f90  modbulkmicro.f90  modbulkmicro3.f90  modbulkmicro3_column.f90  modbulkmicro3_point.f90  modbulkmicro_column.f90  modbulkmicro_point.f90  modbulkmicrostat.f90  modbulkmicrostat3.f90  modbulkmicrostat3_wip.f90  modcanopy.f90  modchecksim.f90  modfft2d.f90  modfftw.f90  modfields.f90  modforces.f90  modgenstat.f90  modheterostats.f90  modlsmstat.f90  modmicrodata3.f90  modmicrophysics.f90  modmpi.f90  modnudge.f90  modpois.f90  modradfull.f90  modradiation.f90  modradstat.f90  modsampling.f90  modstartup.f90  modstattend.f90  modsubgrid.f90  modsurface.f90  (+11 more)
utils/doc/input/: Namoptions.tex
